// Copyright 2022 CeresDB Project Authors. Licensed under Apache-2.0.

// Types for table requests
syntax = "proto3";
package wal;

message TableNextSequenceEntry {
    uint64 table_id = 1;
    uint64 next_sequence_num = 2;
}


// Meta message value used in wal's message queue implementation.
// The shard's all tables' next sequence numbers are stored in it.
message TableNextSequences {
    int64 next_offset = 1;
    repeated TableNextSequenceEntry entries = 2;
}
